fix: fix double speech & pre wrap;

--- a/src/app/styles/_feed.scss
+++ b/src/app/styles/_feed.scss
@@ -8,7 +8,7 @@
 .feed pre {
   margin: 0;
   line-height: 1.4;
-  white-space: pre-line;
+  white-space: pre-wrap;
 }
 .feed mark {
   background-color: transparent;
